# oversight-on-fhir

./: .env.example  .gitignore  AuditEvent-escalation-example.change.history.html  AuditEvent-escalation-example.html  AuditEvent-escalation-example.json  AuditEvent-escalation-example.json.html  AuditEvent-escalation-example.md  AuditEvent-escalation-example.ttl  AuditEvent-escalation-example.ttl.html  AuditEvent-escalation-example.xml  AuditEvent-escalation-example.xml.html  AuditEvent-oversight-reject-example.change.history.html  AuditEvent-oversight-reject-example.html  AuditEvent-oversight-reject-example.json  AuditEvent-oversight-reject-example.json.html  AuditEvent-oversight-reject-example.md  AuditEvent-oversight-reject-example.ttl  AuditEvent-oversight-reject-example.ttl.html  AuditEvent-oversight-reject-example.xml  AuditEvent-oversight-reject-example.xml.html  BUILD_SPEC.md  CodeSystem-high-risk-rule-testing.html  CodeSystem-high-risk-rule.change.history.html  CodeSystem-high-risk-rule.html  CodeSystem-high-risk-rule.json  CodeSystem-high-risk-rule.json.html  CodeSystem-high-risk-rule.md  CodeSystem-high-risk-rule.ttl  CodeSystem-high-risk-rule.ttl.html  CodeSystem-high-risk-rule.xlsx  CodeSystem-high-risk-rule.xml  CodeSystem-high-risk-rule.xml.html  CodeSystem-oversight-disposition-testing.html  CodeSystem-oversight-disposition.change.history.html  CodeSystem-oversight-disposition.html  CodeSystem-oversight-disposition.json  CodeSystem-oversight-disposition.json.html  CodeSystem-oversight-disposition.md  CodeSystem-oversight-disposition.ttl  (+222 more)
docs/: CDS-HOOKS.md
(+101 files in other folders)
