[project]
name = "oversight"
version = "0.1.0"
description = "Instrumented physician oversight of agentic clinical AI (antibiotic de-escalation demonstrator)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "jsonschema>=4.20",
    "rank-bm25>=0.2.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oversight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
